[workspace]
members = ["firecracker-api", "firecracker-sdk"]
resolver = "3"

[workspace.dependencies]
firecracker-api = { path = "firecracker-api" }
firecracker-sdk = { path = "firecracker-sdk" }
openapiv3 = "2"
progenitor = "0.11"
progenitor-client = "0.11"
prettyplease = "0.2"
serde_json = "1"
syn = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[package]
name = "firecracker"
version = "0.1.0"
edition = "2024"

[dependencies]
firecracker-api.workspace = true
firecracker-sdk.workspace = true
