[workspace]
members = ["firecracker-api", "fc-sdk"]
resolver = "3"

[workspace.package]
edition = "2024"
version = "0.1.0"
authors = ["AprilNEA <dev@aprilnea.me>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arcbox-labs/firecracker-client"

[workspace.dependencies]
firecracker-api = { version = "0.1.0", path = "firecracker-api" }
fc-sdk = { version = "0.1.0", path = "fc-sdk" }
openapiv3 = "2"
progenitor = "0.11"
progenitor-client = "0.11"
prettyplease = "0.2"
serde_json = "1"
syn = "2"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "stream",
] }
serde = { version = "1", features = ["derive"] }
futures = "0.3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }

[package]
name = "firecracker"
description = "Rust client SDK for the Firecracker microVM API"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
firecracker-api.workspace = true
fc-sdk.workspace = true
