[package]
name = "firecracker-api"
version = "0.1.0"
edition = "2024"

[dependencies]
progenitor-client.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true

[build-dependencies]
openapiv3.workspace = true
progenitor.workspace = true
prettyplease.workspace = true
serde_json.workspace = true
syn.workspace = true
