[package]
name = "firecracker-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
progenitor-client.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
futures.workspace = true

[build-dependencies]
openapiv3.workspace = true
progenitor.workspace = true
prettyplease.workspace = true
serde_json.workspace = true
syn.workspace = true
